@@ -37,6 +37,13 @@ the installation is running. This makes it possible to fully automate most
 types of installation and even offers some features not available during
 normal installations.
 
+</para><para>
+
+Preseeding is not required. If you use an empty preseed file, the installer
+will behave just the same way as in a normal manual installation. Each
+question you preseed will (if you got it right!) modify the installation in
+some way from that baseline.
+
 </para>
 
   <sect2 id="preseed-methods">
