@@ -7,6 +7,8 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Spell "multiselect" correctly in apt-setup/services-select preseeding
     example.
+  * Note that an empty preseed file is equivalent to a normal manual
+    installation (thanks, Nathan Sutton).
 
  -- Frans Pop <fjp@debian.org>  Tue, 19 Feb 2008 15:22:07 +0100
 
